# ai-blueprint

./: README.md  pyproject.toml
rag/: augment.ipynb  augment.md  building.ipynb  generate.ipynb  generate.md  hub_as_vector_database.ipynb  index.ipynb  indexing.ipynb  pipeline.ipynb  retrieve.ipynb
